Fix flex embed stretch

--- a/web/app/themes/wtysl/assets/stylesheets/patterns/_flex_embed.scss
+++ b/web/app/themes/wtysl/assets/stylesheets/patterns/_flex_embed.scss
@@ -17,10 +17,11 @@
 %flex-embed-item {
   position: absolute;
 
-  top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
 }
 
 %flex-embed-center-content {
